Add rule to check for prepositions with 'enrol'
Added a rule to check for the term 'enrol' and its variations.

--- a/rules.cfg
+++ b/rules.cfg
@@ -68,3 +68,4 @@ autumn,Use 'fall'
 fist name,Change 'fist' to 'first'
 fist and last name,Change 'fist' to 'first'
 Directorate General,Use 'General Directorate'
+enrol\w*,Check preposiiton if any (at school/university, in a program)
