Added rule for hereby

--- a/rules.cfg
+++ b/rules.cfg
@@ -69,3 +69,4 @@ fist name,Change 'fist' to 'first'
 fist and last name,Change 'fist' to 'first'
 Directorate General,Use 'General Directorate'
 enrol\w*,Check preposiiton if any (at a school/university, in a program)
+hereby,Check the word position (as in 'the College President and the Faculty of Communication Disorders hereby award')
