Update rules for till

--- a/rules.cfg
+++ b/rules.cfg
@@ -49,7 +49,7 @@ offence\w*,Looks like British spelling: US spelling is 'offense'
 (on|of) the (one|other) part,Use 'of the first/second part'
 \b(?:city|district|borough|town|region|government|municipality)\b,Consider starting this word with a capital letter
 applicant\w*,Use 'petitioner' if it is a legal setting
-from \w+ to\b,Use 'from... until...' with dates and time
+\btill\b,Use 'until' as a preposition
 achievement\b,Use 'successful completion' in certificate titles
 primary\b,Use 'elementary' if it concerns secondary school level
 ID docum\w*,Use 'ID Card' or just 'ID' to avoid tautology (ID = identity document)
